assets/styles/app.scss
@import "~bootstrap/scss/bootstrap";

// ###################################################################################################
// Variables
// ###################################################################################################
$navbar-light-active-color: DarkSlateBlue;
// ###################################################################################################


// ###################################################################################################
// Navbar
// ###################################################################################################
.navbar{
    background-color: lightslategray;
}

.navbar-nav .nav-link.active{
    color: $navbar-light-active-color !important;
}

// ###################################################################################################
// Content
// ###################################################################################################
body {
    background-color: white;
}
// ###################################################################################################


// ###################################################################################################
// Footer
// ###################################################################################################
footer{
    background-color: lightslategray;
    color: whitesmoke;
}

footer #bottom{
    padding-top: 10px;
    background-color: rgba(0, 0, 0, 0.05);
}

footer #top i{
    font-size: 24px;
}

footer .social-links a:hover i[class$="facebook"]{
    color:#3b5998;
}
footer .social-links a:hover i[class$="twitter"]{
    color:#55acee;
}
footer .social-links a:hover i[class$="google"]{
    color:#dd4b39;
}
footer .social-links a:hover i[class$="instagram"]{
    color:#ac2bac;
}
footer .social-links a:hover i[class$="linkedin"]{
    color:#0082ca;
}
footer .social-links a:hover i[class$="github"]{
    color:#333333;
}

footer a{
    text-decoration:none;
}
// ###################################################################################################

// ###################################################################################################
// Scroll button
// ###################################################################################################
#scrollup {
    position: fixed;
    bottom: 20px;
    right: 20px;
    display: none;
    border-radius: 40%;
    opacity: 0.3;
}
#scrollup:hover{
    opacity: 0.5;
}

